--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="filme-principal">
       <div class="container">
         <h3 class="titulo">HOUSE OF CARDS</h3>
-        <p class="descricao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro.</p>
+        <p class="descricao">Um político inescrupuloso não mede esforços para conquistar o poder nos EUA neste drama vencedor do Emmy e do Globo de Ouro. Assista agora a nova temporada de House of Cards que está imperdível.</p>
         <div class="botoes">
           <button role="button" class="botao"><i class="fas fa-play"></i>ASSISTIR AGORA</button>
           <button role="button" class="botao"><i class="fas fa-info-circle"></i>MAIS INFORMAÇÕES</button>
