Owl Carousel e JQuery

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style/main.css">
+
+  <!--owl css-->
+<link rel="stylesheet" href="/style/owl/owl.carousel.min.css">
+<link rel="stylesheet" href="/style/owl/owl.theme.default.min.css">
 	<title>NETFLIX CLONE</title>
 </head>
 
@@ -32,8 +36,47 @@
       </div>
     </div>
   </main>
+  <div class="carousel-filmes">
+    <div class="owl-carousel owl-theme">
+      <div class="item">
+        <img class="box-filme" src="/img/amaldicaodamansaobly.jpg" alt="amaldicaodamansaobly">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="/img/cobrakai.jpg" alt="cobrakai">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="/img/emilyemparis.jpg" alt="emilyemparis">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="/img/FeartheWalkingDead.jpg" alt="FeartheWalkingDead">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="/img/lucifer.jpg" alt="lucifer">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="/img/os100.jpg" alt="os100">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="/img/riverdale.jpg" alt="riverdale">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="/img/sobrenatural.jpg" alt="sobrenatural">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="/img/theBoys.jpg" alt="theBoys">
+      </div>
+      <div class="item">
+        <img class="box-filme" src="/img/TheWalkingDeadUmNovoUniverso.jpg" alt="TheWalkingDeadUmNovoUniverso">
+      </div>
+    </div>
+  </div>
+
+
 
   <script src="https://kit.fontawesome.com/4dd6426867.js" crossorigin="anonymous"></script>
+<script src="/js/owl/jquery.min.js"></script>
+<script src="/js/owl/owl.carousel.min.js"></script>
+<script src="/js/setup.js"></script>
 </body>
 
 </html>
